[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/unidad.gd" type="Script" id=1]
[ext_resource path="res://scenes/espia.gd" type="Script" id=2]
[ext_resource path="res://sprites/s3.png" type="Texture" id=3]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/s3.png-5c83a335b84104840e31880c47d55362.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/s5.png-68f67a5ca610febf1f6289b2d366b8f4.stex"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.89397, 13.5718 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11.8981, 11.819 )

[node name="espia" type="Node"]
script = ExtResource( 1 )
id = 2

[node name="Personaje" type="KinematicBody2D" parent="." groups=[
"player",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
spr_original = SubResource( 1 )
spr_espia = SubResource( 2 )
vel_desp = 100.0
vel_rot = 15.0
PRECISION = 100
wait_w1 = 1.0
wait_w2 = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje"]
position = Vector2( -0.75103, 0.394326 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Personaje"]
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="Personaje"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje/Area2D"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Personaje/Area2D"]
position = Vector2( 4.19115, 2.09559 )
rotation = 1.5708
scale = Vector2( 0.672567, 0.457393 )
z_index = 1
texture = ExtResource( 3 )

[node name="rango_w1" type="RayCast2D" parent="Personaje"]
cast_to = Vector2( 300, 0 )

[node name="rango_w2" type="RayCast2D" parent="Personaje"]
cast_to = Vector2( 300, 0 )

[node name="cooldown" type="Timer" parent="Personaje"]
one_shot = true
[connection signal="input_event" from="Personaje/Area2D" to="Personaje" method="_on_Area2D_input_event"]
[connection signal="timeout" from="Personaje/cooldown" to="Personaje" method="_on_cooldown_timeout"]
